# sciencesearch

./: COPYRIGHT  LICENSE  README.md  pyproject.toml  requirements-dev.txt
.github/workflows/: checks.yml
binder/: environment.yml  postBuild  pyproject.toml
data/: jft.ipynb
data/jft/: broken_images  green_willow  hana-saka-jiji  momotaro  the_black_bowl  the_cold_lady  the_fire_quest  the_flute  the_good_thunder  the_jelly-fish_takes_a_journey  the_land_of_yomi  the_maiden_of_unai  the_mallet  the_spring_lover_and_the_autumn_lover  the_wind_in_the_pine_tree  urashima
examples/: hyperparam_methods_documentation.ipynb  pipeline.ipynb  quickstart.ipynb  seach_vis_config.json  search.ipynb  search_config.json  search_vis.ipynb  search_vis_config.json  slac_config.json  slac_config_all_elogs.json  slac_config_descriptions.json  slac_keyword_comparison.ipynb  slac_run_all.ipynb  slac_search_demo.ipynb  use_custom_datasource_instructions.md
examples/config_files/: EXAMPLE_slac_config.json  slac_config_all_elogs.json  slac_config_commentary.json  slac_config_descriptions.json  slac_config_params.json
examples/data/: file10.txt  file2.txt  file4.txt  file5.txt  file6.txt  file7.txt  file9.txt  search_vis_keywords.csv
examples/shared/: keyword_vis.css
private_data/preprocessing/: experiment_description_preprocessing.ipynb
sciencesearch/data/: stopwords_en.txt
sciencesearch/nlp/: export.py  hyper.py  keyword_comparator.py  models.py  preprocessing.py  search.py  slac_data_extractor.py  sweep.py  train.py  visualize_kws.py
sciencesearch/nlp/tests/: test_export.py  test_hyper.py  test_models.py  test_preprocessing.py  test_sweep.py
sciencesearch/nlp/tests/test_files/: cleaned_text1  uncleaned_text1.txt
sciencesearch/nlp/tests/test_files/preprocessing/: preprocessing_test_text.json
shared/: keyword_vis.css
