[build-system]
requires = [
    "setuptools >= 64",
    "setuptools_scm >= 7",
]
build-backend = "setuptools.build_meta"

[project]
name = "sciencesearch"
readme = "README.md"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: End Users/Desktop",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: BSD License",
    "Natural Language :: English",
    "Operating System :: MacOS",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: Unix",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: Implementation :: CPython",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
keywords = ["ScienceSearch", "data science", "natural language processing", "machine learning"]
dynamic = ["version"]
dependencies = [
    "scipy<=1.12",
    "beautifulsoup4",
    "pandas",
    "matplotlib",
    "gensim",
    "rake_nltk",
    "scikit-learn",
    "yake",
    "pke@git+https://github.com/boudinfl/pke.git"
]
[project.optional-dependencies]
dev = [
    "pylint",
    "pytest"
]

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra --strict-markers"
markers = [
    "unit",
    "integration"
]
testpaths = [
    "sciencesearch",
]

# [project.scripts]
# idaes-conn = "idaes_connectivity.cli:main"

[tool.setuptools]
packages = ["sciencesearch"]

[tool.setuptools_scm]

[tool.pylint.main]
py-version = "3.10"

[tool.pylint."messages control"]
disable = [
    "E", # all errors
    "W", # all warnings
    "C", # all conventions
    "R", # all refactor
]
# see https://pylint.readthedocs.io/en/v2.17.7/user_guide/messages/index.html
# for a list of all messages
enable = [
    "import-error",
    "unused-import",
    "wildcard-import",
    "wrong-import-order",
    "wrong-import-position",
    "ungrouped-imports",
    "implicit-str-concat",
    "dangerous-default-value",
    "invalid-name",
]
module-naming-style = "snake_case"
const-naming-style = "any"
class-naming-style = "any"
function-naming-style = "any"
method-naming-style = "any"
attr-naming-style = "any"
argument-naming-style = "any"
variable-naming-style = "any"
class-attribute-naming-style = "any"
inlinevar-naming-style = "any"

#[tool.pytest.ini_options]
#addopts = """
#--pyargs idaes_connectivity
#--import-mode=importlib
#-rsx
#"""

[tool.typos.files]
extend-exclude = [
    "*.svg",
    "*.json",
]

# [tool.typos.default.extend-words]
[tool.typos.default]
extend-ignore-re = [
    # Jupyter notebooks: ignore hexadecimal values in "id" cell metadata field
    '"id": "[0-9a-f]+",'
]
